estefania_fdez/session01/exercise02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: exercise-02
  labels:
    app: mariadb
    service: database
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mariadb
        service: database
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
          - containerPort: 3306
            name: mariadb
        livenessProbe:
            tcpSocket:
              port: 3306
            readinessProbe:
              tcpSocket:
        port: 3306
