estefania_fdez/session01/exercise02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-02
  labels:
    app: wordpress
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: bitnami/wordpress:4.9.4
        name: wordpress
        ports:
          - containerPort: 80
            name: wordpress
        readinessProbe:
            httpGet:
            path: /wp-admin
            port: http
            initialDelaySeconds: 15
        livenessProbe:
            httpGet:
            path: /wp-admin
            port: http
            initialDelaySeconds: 15
            periodSeconds: 5
