estefania_fdez/session01/exercise02/wordpress-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
  labels:
    app: wordpress
  name: wordpress-svc
  namespace: exercise-02
spec:
  ports:
    -
      port: 80
  selector:
    app: wordpress
  targetPort: 80
